--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,6 +12,7 @@
   <!-- Bower Components -->
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-route/angular-route.min.js"></script>
+  <script src="bower_components/angular-resource/angular-resource.min.js"></script>
 
   <!-- App JS -->
   <script src="app.js"></script>
